--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,15 +9,20 @@
       <div class="col-sm text-center">
         <h5>Kontakt</h5>
         <p>UHD: Tel.Nr 069 9566 2323</p>
+        <p>mail@kundenservice.de</p>
       </div>
       <div class="col-sm text-center">
         <h5>Links</h5>
-        <a href="">Intranet </a>
+        <a href="">Intranet</a><br>
+        <a href="">Personalservice</a><br>
+        <a href="">Weiteres</a>
       </div>
     </div>
   </div>
+  
   <div class="bg-dark text-center py-2">
-    Copyright 2020 @ Team Yoshi
+    <hr>
+    Copyright 2021 @ Team Yoshi
   </div>
 
 </footer>
