--- a/src/app/welcome-message/welcome-message.component.html
+++ b/src/app/welcome-message/welcome-message.component.html
@@ -4,7 +4,7 @@
       <p class="card-text">Bitte melden Sie sich im Folgenden für FleDeBoB an, um sich Ihren Arbeitsplatz zuweisen zu können</p>
       
       <div class="text-center">
-        <a href="/login" class="btn btn-primary my-auto mx-auto btn-lg"> Anmelden </a>
+        <a  class="btn btn-primary my-auto mx-auto btn-lg" routerLink="login"> Anmelden </a>
       </div>
       
 
