--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,5 +1,6 @@
 <div class="card">
-  <div class="card-body">
-    Tielen Dank für Ihre Buchung. Ihr Sitzplatz wird Ihnen heute Nach um 12 Uhr zugewiesen.
+    <div class="card-body">
+      <h5 class="card-title">Ihre Buchung wurde erfolgreich abgeschlossen</h5>
+      <a routerLink="/reservations" class="btn btn-primary">Meine Reservierungen anzeigen</a>
+    </div>
   </div>
-</div>
