--- a/src/app/benefits/benefits.component.html
+++ b/src/app/benefits/benefits.component.html
@@ -1,7 +1,7 @@
 <div class="card mt-3">
   
     <div class="container px-5 py-1" id="icon-grid">
-      <h3 class="card-title mt-2"> <i class="bi bi-question-circle-fill me-2" ></i> Wie funktioniert FleDeBoB? </h3>
+      <h3 class="card-title mt-2"> <i class="bi bi-question-circle-fill me-2" ></i> Wie funktioniert FleDeBoBB? </h3>
   
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-3">
         <div class="col d-flex align-items-start">
@@ -16,7 +16,7 @@
             <i class="bi bi-pc-display me-2" style="font-size: 2rem;"></i>
           <div>
             <h4 class="fw-bold mb-0"> Arbeitsplatz auswählen  </h4>
-            <p> Nutze die praktische Filterung von FleDeBoB und suche dir den passenden Arbeitsplatz für deinen Diensttag aus! </p>
+            <p> Nutze die praktische Filterung von FleDeBoBB und suche dir den passenden Arbeitsplatz für deinen Diensttag aus! </p>
           </div>
         </div>
         <div class="col d-flex align-items-start">
