--- a/src/app/dialogue/dialogue.component.html
+++ b/src/app/dialogue/dialogue.component.html
@@ -43,12 +43,11 @@
           <input data-datepicker="" class="form-control" id="birthday" type="text" placeholder="TT.MM.JJJJ" required>
         </div>
 
-      </div>
-
+    <!--</div>
       <div class="col">
         Column 3
       </div>
-    </div>
+    </div>-->
   </div>
 
 
