refactoring and dialogue

--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,6 +1,7 @@
 <div class="card">
     <div class="card-body">
       <h5 class="card-title">Ihre Buchung wurde erfolgreich abgeschlossen</h5>
+      <p class="card-text"> Vielen Dank für Ihre Buchung. In kürze erhalten Sie per E-Mail eine Reservierungsbestätigung</p>
       <a routerLink="/reservations" class="btn btn-primary">Meine Reservierungen anzeigen</a>
     </div>
   </div>
