--- a/src/app/dialogue/dialogue.component.html
+++ b/src/app/dialogue/dialogue.component.html
@@ -1,7 +1,7 @@
 <div class="card my-2">
   <div class="container py-2">
     <div class="row">
-      <div class="col-sm">
+      <div class="col-sm py-2">
         <h5>Standort</h5>
 
 
@@ -33,22 +33,22 @@
         </div>
 
       </div>
-      <div class="col-auto col-sm">
+      <div class="col-auto col-sm py-2">
         <h5>Datum</h5>
 
         <div class="input-group">
           <span class="input-group-text">
             <i class="bi bi-calendar-week-fill"></i>
           </span>
-          <input type="date" data-datepicker="" class="form-control" id="date" placeholder="TT.MM.JJJJ" required>
+          <input type="date" class="form-control" id="date" placeholder="TT.MM.JJJJ" required>
         </div>
 
     </div>
-      <div class="col">
+      <div class="col py-2">
         <h5>Wiederkehrende Buchung</h5>
-        <input class="form-check-input" type="checkbox" id="weekly" />
+        <input class="form-check-input mx-1" type="checkbox" id="weekly" />
         <label class="form-check-label" for="weekly">
-          wöchentliche Wiederholung (gleicher Wochentag)
+          wöchentliche Wiederholung
         </label>
       </div>
     </div>
