layouts and text

--- a/src/app/dialogue/dialogue.component.html
+++ b/src/app/dialogue/dialogue.component.html
@@ -40,7 +40,7 @@
           <span class="input-group-text">
             <i class="bi bi-calendar-week-fill"></i>
           </span>
-          <input type="date" class="form-control" id="date" placeholder="TT.MM.JJJJ" required>
+          <input type="date" class="form-control datepicker" id="date" placeholder="TT.MM.JJJJ" required>
         </div>
 
     </div>
