--- a/src/app/benefits/benefits.component.html
+++ b/src/app/benefits/benefits.component.html
@@ -23,7 +23,7 @@
             <i class="bi bi-chat-right-quote me-2" style="font-size: 2rem;"></i>
           <div>
             <h4 class="fw-bold mb-0"> Zuteilung erhalten </h4>
-            <p> Das System teilt dir am Morgen des Besuchs im Büro deinen Arbeitsplatz zu. </p>
+            <p> Das System teilt dir spätestes am Morgen deines Besuchs mit, ob die Zuteilung deines Arbeitsplatzes gepasst hat. </p>
           </div>
         </div>
         <div class="col d-flex align-items-start">
