--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,8 +2,8 @@
 
     <div class="container-fluid container">
       <a class="navbar-brand" href="#">
-        <img src="assets/bbk_logo.png" altwidth="30" height="30" alt="">
-        FleDeBoBB
+        <img src="assets/transparent.png" altwidth="50" height="50" alt="">
+        
       </a>
 
       <div class="d-flex">
