--- a/src/app/benefits/benefits.component.html
+++ b/src/app/benefits/benefits.component.html
@@ -1,4 +1,4 @@
-<div class="card mt-3">
+<div class="card mt-3 my-2">
   
     <div class="container px-5 py-1" id="icon-grid">
       <h3 class="card-title mt-2"> <i class="bi bi-question-circle-fill me-2" ></i> Wie funktioniert FleDeBoBB? </h3>
@@ -8,7 +8,7 @@
           <i class="bi bi-calendar-week me-2" style="font-size: 2rem;"></i>
           <div>
             <h4 class="fw-bold mb-0">Besuch planen</h4>
-            <p>Überlege dir, wann du in den nächsten Tagen in die Bundesbank gehen möchtes. Melde dich mindestens einen Tag vor dem Besuch im Büro an! </p>
+            <p>Überlege dir, wann du in den nächsten Tagen ins Büro gehen möchtest. Melde dich mindestens einen Tag vor dem Besuch im Büro an! </p>
             <!-- <button type="button" class="btn btn-primary">Primary</button> -->
           </div>
         </div>
