--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
-<footer class="footer bg-dark text-light">
-  <hr>
-  <div class="container bg-dark">
+<footer class="footer color text-dark py-2">
+
+  <div class="container color">
     <div class="row">
       <div class="col-sm text-center">
         <h6>Hilfe</h6>
@@ -8,8 +8,8 @@
       </div>
       <div class="col-sm text-center">
         <h5>Kontakt</h5>
-        <p>UHD: Tel.Nr 069 9566 2323</p>
-        <p>mail@kundenservice.de</p>
+        <p>UHD: Tel.Nr 069 1234 5678</p>
+        <p>kundenservice@fledebobb.de</p>
       </div>
       <div class="col-sm text-center">
         <h5>Links</h5>
@@ -20,7 +20,7 @@
     </div>
   </div>
   
-  <div class="bg-dark text-center py-2">
+  <div class="color text-center py-2">
     <hr>
     Copyright 2021 @ Team Yoshi
   </div>
