--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark mb-3">
+<nav class="navbar navbar-dark mb-3">
 
     <div class="container-fluid container">
       <a class="navbar-brand" href="#">
@@ -6,9 +6,9 @@
         
       </a>
 
-      <div class="d-flex">
+      <div class="d-flex text-dark">
         <div class="nav-item dropdown " *ngIf="loginService.isLoggedIn">
-          <a class="nav-link dropdown-toggle text-light" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           </a>
           <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarScrollingDropdown">
             <li><a class="dropdown-item" routerLink="reservations">Meine Reservierungen</a></li>
@@ -17,9 +17,9 @@
             <li><a class="dropdown-item" href="#">Logout</a></li>
           </ul>
         </div>
-        <p class="text-light mx-auto my-auto me-2" routerLink="login" *ngIf="loginService.isLoggedIn">Max Mustermann </p>
-        <a class="text-light mx-auto my-auto me-2" routerLink="login" *ngIf="!loginService.isLoggedIn" >Anmelden </a>
-        <i class="bi bi-person-circle me-2 text-light" style="font-size: 2rem;"></i>
+        <p class="text-dark mx-auto my-auto me-2" routerLink="login" *ngIf="loginService.isLoggedIn">Max Mustermann </p>
+        <a class="text-dark mx-auto my-auto me-2" routerLink="login" *ngIf="!loginService.isLoggedIn" >Anmelden </a>
+        <i class="bi bi-person-circle me-2 text-dark" style="font-size: 2rem;"></i>
         
       </div>
       
