--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         <div class="nav-item dropdown " *ngIf="loginService.isLoggedIn">
           <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           </a>
-          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarScrollingDropdown">
+          <ul class="dropdown-menu " aria-labelledby="navbarScrollingDropdown">
             <li><a class="dropdown-item" routerLink="reservations">Meine Reservierungen</a></li>
             <!-- <li><a class="dropdown-item" href="#">Another action</a></li> -->
             <li><hr class="dropdown-divider"></li>
